[gd_scene load_steps=42 format=3 uid="uid://cp030u4v4at67"]

[ext_resource type="Script" path="res://scripts/goblin.gd" id="1_04ln1"]
[ext_resource type="Texture2D" uid="uid://dc8n2kkj4cyti" path="res://sprites/dagger.png" id="2_5avma"]
[ext_resource type="Texture2D" uid="uid://db5siu65k7i88" path="res://sprites/globin.png" id="2_qle06"]
[ext_resource type="AudioStream" uid="uid://dqcq8pnb706f2" path="res://sounds/goblin_yell.mp3" id="4_1il02"]
[ext_resource type="PackedScene" uid="uid://dsdts71tmlke5" path="res://scenes/damage_zone.tscn" id="4_24x6m"]
[ext_resource type="Script" path="res://scripts/loot_proxy.gd" id="4_jb6hs"]
[ext_resource type="PackedScene" uid="uid://dqepojbmga4ea" path="res://scenes/navigation_agent_2d.tscn" id="5_ol62f"]
[ext_resource type="AudioStream" uid="uid://colc12t274qwt" path="res://sounds/weapon/dagger_woosh.mp3" id="6_q4eyh"]
[ext_resource type="AudioStream" uid="uid://yi2aurllo2s0" path="res://sounds/weapon/knifesword-stab.wav" id="7_6xa88"]
[ext_resource type="Script" path="res://scripts/targetFinder.gd" id="10_ap58d"]
[ext_resource type="Script" path="res://scripts/wandering.gd" id="11_rn7d6"]
[ext_resource type="Script" path="res://scripts/what_am_i_thinking.gd" id="12_7c6xy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riha1"]
size = Vector2(20, 24.4643)

[sub_resource type="CircleShape2D" id="CircleShape2D_cpxg6"]
radius = 42.0476

[sub_resource type="Animation" id="Animation_2swvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/DaggerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, 36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/DaggerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg68e"]
resource_name = "attack"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/DaggerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.1, 0.12, 0.14, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(36, 34), Vector2(36, 34), Vector2(108, 0), Vector2(108, 0), Vector2(60, 22), Vector2(60, 22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/DaggerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.1, 0.12, 0.14, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.214675, 0.214675, 0.0, 0.0, 0.0575959, 0.0575959]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/DaggerSprite/damage_zone:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.08),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_dagger_attack"
}]
}

[sub_resource type="Animation" id="Animation_mtitu"]
resource_name = "chasing"
loop_mode = 1

[sub_resource type="Animation" id="Animation_kj4y3"]
resource_name = "combo"
length = 0.6
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/DaggerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.2, 0.26, 0.28, 0.36, 0.42, 0.44, 0.46, 0.48, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(36, 34), Vector2(36, 34), Vector2(119, 0), Vector2(119, 0), Vector2(2.99998, -83), Vector2(2.99998, -83), Vector2(2.99998, -83), Vector2(67, -58), Vector2(98, -5), Vector2(84, 68), Vector2(84, 68)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/DaggerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14, 0.2, 0.26, 0.28, 0.36, 0.42, 0.44, 0.46, 0.48, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.214675, 0.214675, 0.0, 0.0, -1.83495, -1.83495, -1.83495, -0.838437, -0.00977713, 0.614493, 0.614493]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/DaggerSprite/damage_zone:monitoring")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.44, 0.54),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.16),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_dagger_attack"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/DaggerSprite/combo1:monitoring")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.18, 0.26),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.32),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null, 660, 20],
"method": &"push"
}]
}

[sub_resource type="Animation" id="Animation_wvlkw"]
resource_name = "defense"
length = 100.0

[sub_resource type="Animation" id="Animation_ic3m7"]
resource_name = "dying"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_wkec3"]
resource_name = "stun"

[sub_resource type="Animation" id="Animation_gylsu"]
resource_name = "wandering"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uihj1"]
_data = {
"RESET": SubResource("Animation_2swvi"),
"attack": SubResource("Animation_cg68e"),
"chasing": SubResource("Animation_mtitu"),
"combo": SubResource("Animation_kj4y3"),
"defense": SubResource("Animation_wvlkw"),
"dying": SubResource("Animation_ic3m7"),
"stun": SubResource("Animation_wkec3"),
"wandering": SubResource("Animation_gylsu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5dv5"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c14qp"]
animation = &"chasing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7isrm"]
animation = &"combo"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ny2y5"]
animation = &"defense"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jqmsc"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3dc13"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lma3l"]
animation = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6gg5j"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kqpmq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0v775"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xa6cx"]
advance_mode = 2
advance_condition = &"target"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xhdx3"]
advance_mode = 2
advance_condition = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ayesx"]
advance_mode = 2
advance_condition = &"defense"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_squkl"]
advance_mode = 2
advance_condition = &"undefense"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_asiwc"]
advance_mode = 2
advance_condition = &"unstun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ixrts"]
advance_mode = 2
advance_condition = &"combo"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kni3y"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_42fvj"]
states/Start/position = Vector2(200.5, 91)
states/attack/node = SubResource("AnimationNodeAnimation_w5dv5")
states/attack/position = Vector2(602.34, 242.21)
states/chasing/node = SubResource("AnimationNodeAnimation_c14qp")
states/chasing/position = Vector2(444, 94)
states/combo/node = SubResource("AnimationNodeAnimation_7isrm")
states/combo/position = Vector2(669.315, 96.332)
states/defense/node = SubResource("AnimationNodeAnimation_ny2y5")
states/defense/position = Vector2(360.745, -53.218)
states/dying/node = SubResource("AnimationNodeAnimation_jqmsc")
states/dying/position = Vector2(717.48, 22.47)
states/stun/node = SubResource("AnimationNodeAnimation_3dc13")
states/stun/position = Vector2(593.48, 27.47)
states/wandering/node = SubResource("AnimationNodeAnimation_lma3l")
states/wandering/position = Vector2(314.42, 219.461)
transitions = ["chasing", "attack", SubResource("AnimationNodeStateMachineTransition_6gg5j"), "attack", "chasing", SubResource("AnimationNodeStateMachineTransition_kqpmq"), "Start", "wandering", SubResource("AnimationNodeStateMachineTransition_0v775"), "wandering", "chasing", SubResource("AnimationNodeStateMachineTransition_xa6cx"), "chasing", "wandering", SubResource("AnimationNodeStateMachineTransition_xhdx3"), "chasing", "defense", SubResource("AnimationNodeStateMachineTransition_ayesx"), "defense", "chasing", SubResource("AnimationNodeStateMachineTransition_squkl"), "stun", "chasing", SubResource("AnimationNodeStateMachineTransition_asiwc"), "chasing", "combo", SubResource("AnimationNodeStateMachineTransition_ixrts"), "combo", "chasing", SubResource("AnimationNodeStateMachineTransition_kni3y")]
graph_offset = Vector2(83.0025, -187.711)

[node name="Goblin" type="CharacterBody2D" groups=["mob"]]
z_index = 10
script = ExtResource("1_04ln1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qle06")
region_rect = Rect2(384, 128, 128, 128)

[node name="DaggerSprite" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(55, 36)
texture = ExtResource("2_5avma")
script = ExtResource("4_jb6hs")
item_path = "res://scenes/i_dagger.tscn"

[node name="damage_zone" parent="Sprite2D/DaggerSprite" node_paths=PackedStringArray("sound") instance=ExtResource("4_24x6m")]
position = Vector2(-55, -36)
damage = 0.5
sound = NodePath("../../../dagger_stab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/DaggerSprite/damage_zone"]
position = Vector2(67.5, 37)
rotation = 1.5708
scale = Vector2(1.72, 5.6)
shape = SubResource("RectangleShape2D_riha1")

[node name="combo1" parent="Sprite2D/DaggerSprite" node_paths=PackedStringArray("sound") instance=ExtResource("4_24x6m")]
position = Vector2(-55, -36)
damage = 0.5
knockback = 660.0
sound = NodePath("../../../dagger_stab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/DaggerSprite/combo1"]
position = Vector2(67.5, 37)
rotation = 1.5708
scale = Vector2(1.72, 5.6)
shape = SubResource("RectangleShape2D_riha1")

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(130, 0)

[node name="ItemBack" type="Node2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-49, -6)
rotation = -1.62425

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cpxg6")

[node name="NavigationAgent2D" parent="." instance=ExtResource("5_ol62f")]

[node name="TargetFinder" type="Node" parent="."]
script = ExtResource("10_ap58d")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}
tree_root = SubResource("AnimationNodeStateMachine_42fvj")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/combo = false
parameters/conditions/defense = false
parameters/conditions/target = false
parameters/conditions/undefense = false
parameters/conditions/unstun = false
parameters/conditions/wandering = false

[node name="death_yell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1il02")
bus = &"SFX"

[node name="dagger_attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q4eyh")
bus = &"SFX"

[node name="dagger_stab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6xa88")
bus = &"SFX"

[node name="Wandering" type="Node" parent="."]
script = ExtResource("11_rn7d6")

[node name="WhatAmIThinking" type="Node" parent="."]
script = ExtResource("12_7c6xy")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
